...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/editProfileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/user"
        android:layout_marginBottom="16dp"/>

...
        android:text="click above to edit photo"
        android:textAlignment="center"
        android:layout_centerHorizontal="true">

    </TextView>
    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editProfileImage"
        android:layout_marginTop="16dp"
        android:hint="First Name" />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editFirstName"
        android:layout_marginTop="8dp"
        android:hint="Last Name" />

    <EditText
        android:id="@+id/editContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLastName"
        android:layout_marginTop="8dp"
        android:hint="Contact Information" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editContact"
        android:layout_marginTop="16dp"
        android:text="Save" />
</RelativeLayout>
