<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEF5FF"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/profileContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/profileContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"

        android:background="#EEF5FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:contentDescription="@string/profile_picture_of_user"
            android:clipToOutline="true"
            android:focusable="true"
            android:background="@drawable/rounded_corner_profile_bg"

            android:src="@drawable/user" />


        <ImageView

            android:id="@+id/editProfileSubtext"
            android:layout_width="38dp"
            android:layout_height="30dp"
            android:layout_below="@id/profilePicture"
            android:layout_alignEnd="@+id/profilePicture"
            android:layout_marginTop="-45dp"
            android:layout_marginEnd="-8dp"
            android:background="@drawable/rounded_corner_profile_bg"
            android:clickable="true"
            android:focusable="true"

            android:contentDescription="@string/edit_profile_picture"
            android:src="@drawable/camera_icon" />

        <LinearLayout
            android:id="@+id/profileDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editProfileSubtext"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_corner_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="5dp"
                android:text="@string/user_first_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="5dp"
                android:text="@string/user_last_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="5dp"
                android:text="@string/number"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_home_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autoLink="web"
                android:padding="5dp"
                android:text="Homepage URL"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/editButton"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileDetailsLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="199dp"
            android:background="@drawable/rounded_button_background"
            android:backgroundTint="@color/color2"
            android:text="Edit Profile"
            android:padding="13dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileDetailsLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="9dp"
            android:background="@drawable/rounded_button_background"
            android:backgroundTint="@color/Red"
            android:padding="13dp"
            android:text="Delete Picture"
            android:textSize="18sp" />

        <Button
            android:id="@+id/adminButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deleteButton"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="9dp"
            android:background="@drawable/rounded_button_background"
            android:backgroundTint="@color/Red"
            android:text="Admin Controls"
            android:padding="13dp"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
