<!-- fragment_toolbar.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Home Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Home"
        android:layout_marginStart="16dp"/>

    <!-- Profile Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:layout_toEndOf="@+id/homeButton"
        android:layout_marginStart="16dp"/>

    <!-- Message Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/messageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Message"
        android:layout_toEndOf="@+id/profileButton"
        android:layout_marginStart="16dp"/>

</RelativeLayout>

